feat(FontLoader): working fontloader using cdn

--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     <title>Hello there!</title>
     <link rel="icon" type="image/x-icon" href="./assets/favicon-16x16.png">
     <link rel="stylesheet" href="./style.css">
+    <script type="importmap">
+        {
+          "imports": {
+            "three/addons": "https://cdn.jsdelivr.net/npm/three-addons@1.2.0/build/three-addons.min.js"
+          }
+        }
+      </script>
+
 </head>
 
 <body>
