feat(FontLoader): only use original threejs cdn with local fonts

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     <script type="importmap">
         {
           "imports": {
-            "three/addons": "https://cdn.jsdelivr.net/npm/three-addons@1.2.0/build/three-addons.min.js"
+            "three": "https://unpkg.com/three@0.158.0/build/three.module.js",
+            "three/examples/": "https://unpkg.com/three@0.158.0/examples/"
           }
         }
-      </script>
+    </script>
 
 </head>
 
