--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
 
 
-    <script type="module" src="./script.js"></script>
+    <script type="module" src="./scripts/main.js"></script>
 </body>
 
 </html>
