fix(Carousel): fixed reset logic

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         {
           "imports": {
             "three": "https://unpkg.com/three@0.158.0/build/three.module.js",
-            "three/examples/": "https://unpkg.com/three@0.158.0/examples/"
+            "three/examples/": "https://unpkg.com/three@0.158.0/examples/",
+            "tween": "https://cdnjs.cloudflare.com/ajax/libs/tween.js/21.0.0/tween.esm.js"
           }
         }
     </script>
