--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Hello there!</title>
-    <link rel="icon" type="image/x-icon" href="./assets/favicon-16x16.png">
+    <link rel="icon" type="image/x-icon" href="./assets/images/favicon-16x16.png">
     <link rel="stylesheet" href="./style.css">
     <script type="importmap">
         {
