--- a/index.html
+++ b/index.html
@@ -1,12 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- <div class="headline-container">
-        <div id="text-behind">Tobias<br>Weinert</div>
-        <div id="text-behind-blur">Tobias<br>Weinert</div>
-        <div id="text-front">Tobias<br>Weinert</div>
-    </div> -->
-
 <head>
     <meta charset="UTF-8">
     <title>Hello there!</title>
@@ -25,7 +19,7 @@
 </head>
 
 <body>
-    <div class="main">
+    <div class="main" id="main">
         <h1>Tobias Weinert</h1>
         <div class="title">student &amp developer</div>
         <div class="canvas-container" id="cv-container"></div>
