feat(Texts): texts that move with the boxes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Hello there!</title>
+    <title>Hi, I'm Tobias</title>
     <link rel="icon" type="image/x-icon" href="./assets/images/favicon-16x16.png">
     <link rel="stylesheet" href="./style.css">
     <script type="importmap">
