fix(html): grabbable cursor

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="main" id="main">
         <h1>Tobias Weinert</h1>
         <div class="title">student &amp developer</div>
-        <div class="canvas-container" id="cv-container"></div>
+        <div class="canvas-container grabbable" id="cv-container"></div>
         <div id="currentSlide"></div>
 
         <div class="text-container">
