--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h1>Tobias Weinert</h1>
         <div class="title">student &amp developer</div>
         <div class="canvas-container grabbable" id="cv-container"></div>
-        <div id="currentSlide"></div>
+        <div id="currentSlide" hidden></div>
 
         <div class="text-container">
             <div class="socials">
