--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
           "imports": {
             "three": "https://unpkg.com/three@0.158.0/build/three.module.js",
             "three/examples/": "https://unpkg.com/three@0.158.0/examples/",
-            "tween": "https://cdnjs.cloudflare.com/ajax/libs/tween.js/21.0.0/tween.esm.js"
+            "tween": "https://cdnjs.cloudflare.com/ajax/libs/tween.js/21.0.0/tween.esm.js",
+            "dat.gui": "https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.9/dat.gui.min.js"
           }
         }
     </script>
