--- a/index.html
+++ b/index.html
@@ -16,6 +16,21 @@
           }
         }
     </script>
+    <script id="vertexshader" type="vertex">
+        varying vec2 vUv;
+        void main() {
+          vUv = uv;
+          gl_Position = projectionMatrix * modelViewMatrix * vec4( position, 1.0 );
+        }
+    </script>
+    <script id="fragmentshader" type="fragment">
+        uniform sampler2D baseTexture;
+        uniform sampler2D bloomTexture;
+        varying vec2 vUv;
+        void main() {
+          gl_FragColor = (texture2D( baseTexture, vUv) + vec4( 1.0) * texture2D(bloomTexture, vUv));
+        }
+    </script>
 </head>
 
 <body>
