chore(Text): use old headings as loading text

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <div class="main" id="main">
         <div class="canvas-container grabbable" id="cv-container"></div>
         <div class="site-content">
-            <h1 class="name">Tobias Weinert</h1>
-            <span class="subtitle">student &amp developer</span>
+            <h1 class="name">Loading Scene...</h1>
+            <span class="subtitle">please wait</span>
             <div id="currentSlide" hidden></div>
 
             <div class="text-container">
