fix(Loader): text and centering

--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
     <div class="main" id="main">
         <div class="canvas-container grabbable" id="cv-container"></div>
         <div id="site-content">
-            <h1 class="name">Loading Scene...</h1>
+            <h1 class="name">Loading Scene</h1>
             <span class="subtitle">please wait</span>
             <div class="loader"></div>
+
             <div id="currentSlide" hidden></div>
         </div>
         <div class="text-container">
