feat(Tracking): track users

--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
         }
     </script>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1EPJR2416T"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-1EPJR2416T');
+</script>
 
 <body>
     <div class="main" id="main">
