fix(LoadingScreen): translate loading screen

--- a/index.html
+++ b/index.html
@@ -46,8 +46,11 @@
     <div class="main" id="main">
         <div class="canvas-container grabbable" id="cv-container"></div>
         <div id="site-content">
-            <h1 class="name">Loading Scene</h1>
-            <span class="subtitle">please wait</span>
+            <div class="text1">
+                <h1 class="name">Ladevorgang</h1>
+                <span class="subtitle">bitte warten</span><br><br>
+                <span class="subtitle">das könnte einen Moment dauern...</span>
+            </div>
             <div class="loader"></div>
 
             <div id="currentSlide" hidden></div>
