--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         <div id="site-content">
             <div class="text1">
                 <h1 class="name">Ladevorgang</h1>
-                <span class="subtitle">bitte warten</span><br><br>
-                <span class="subtitle">das könnte einen Moment dauern...</span>
+                <span class="subtitle">bitte warten..</span><br><br>
+                <span class="subtitle">falls die Seite länger nicht lädt, einfach aktualisieren</span>
             </div>
             <div class="loader"></div>
 
